# python-selenium-ci-test

selenium-test/: pyproject.toml
selenium-test/selenium_test/: open_page.py
