[tool.poetry]
name = "selenium-test"
version = "0.1.0"
description = ""
authors = ["Therapon Skoteiniotis <therapon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
